@@ -324,8 +324,9 @@ Tests
 
 - Issue #20605: Make test_socket getaddrinfo OS X segfault test more robust.
 
-- Issue #20939: Fix test_geturl failure in test_urllibnet due to
-  new redirect of http://www.python.org/ to https://www.python.org.
+- Issue #20939: Avoid various network test failures due to new
+  redirect of http://www.python.org/ to https://www.python.org:
+  use http://www.example.com instead.
 
 Documentation
 -------------
